--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Diversity Dory",
-  "short_name": "Div",
+  "short_name": "Diversity Dory",
   "icons": [{
         "src": "images/touch/icon-128x128.png",
         "sizes": "128x128",
